<resources>
    <string name="app_name">NOWK</string>
    <string name="username">Имя пользователя</string>
    <string name="sign_in">Войдите в аккаунт:</string>
    <string name="private_key">Закрытый ключ</string>
    <string name="send">Войти</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="refresh">Refresh</string>
    <string name="textview">TextView</string>
    <string name="private_key_will_appear_here">Private key will appear here</string>

    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
        <item name="android:windowBackground">@drawable/fon1</item>
    </style>
</resources>