<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fitsSystemWindows="true">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="24dp" />

    <!-- Поле ввода имени -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="262dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/privateKeyEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <!-- Поле ввода закрытого ключа -->
    <EditText
        android:id="@+id/privateKeyEditText"
        android:layout_width="337dp"
        android:layout_height="44dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/private_key"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <!-- Кнопка -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:text="@string/send"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privateKeyEditText" />

    <Button
        android:id="@+id/openSecondActivityButton"
        android:layout_width="155dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
