<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fitsSystemWindows="true">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="262dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/privateKeyContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <!-- Контейнер с ключом и кнопкой копирования -->
    <LinearLayout
        android:id="@+id/privateKeyContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/privateKeyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/private_key_will_appear_here"
            android:padding="8dp"
            android:background="#EEEEEE"
            android:textIsSelectable="true"
            android:textSize="14sp"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:ellipsize="end" />

    </LinearLayout>

    <!-- Кнопка отправки -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:text="@string/sign_up"
        android:onClick="register"
        app:layout_constraintTop_toBottomOf="@id/privateKeyContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/send"
        android:onClick="login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:onClick="login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_rew" />

</androidx.constraintlayout.widget.ConstraintLayout>
